Generate css-classes in iframe on up to 20 municipalities to avoid peformance and layout problems.

--- a/municipalityinitiative-web/src/main/webapp/css/less-main/kuntalaisaloite-iframe.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-main/kuntalaisaloite-iframe.less
@@ -153,7 +153,7 @@ body {
     float: left;
     margin-right: 20px;
 }
-@iterations: 100;
+@iterations: 20;
 
 .loopingClass(@index) when (@index > 0){
 
@@ -182,11 +182,11 @@ body {
 .several-municipalities-scrollable {
     // your resulting css
     #content-wrapper {
-        top: 100 / 5 * 20 + 75px;
+        top: 20 / 5 * 20 + 75px;
     }
 
     #header {
-        height: 100 / 5 * 20 + 59px;
+        height: 20 / 5 * 20 + 59px;
         overflow: auto;
     }
 }
@@ -806,7 +806,7 @@ ul, ol {
     
     h1 { margin-top:0; }
 
-    @iterations: 100;
+    @iterations: 20;
 
     .loopingClass(@index) when (@index > 0){
 
